...
        viewController?.showNetworkError(message: error.localizedDescription)
    }
    
    private func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            statisticService?.store(correct: correctAnswers, total: self.questionsAmount)
            let quizResult = QuizResultsViewModel(title: "Этот раунд окончен!",
                                                  text: """
                                                  Ваш результат: \(correctAnswers)/\(self.questionsAmount)
                                                  Количество сыгранных квизов: \(statisticService?.gamesCount ?? 0)
                                                  Рекорд: \(statisticService?.bestGame.correct ?? 0)/\(self.questionsAmount) (\(statisticService?.bestGame.date.dateTimeString ?? ""))
                                                  Средняя точность: \(String(format: "%.2f", statisticService?.totalAccuracy ?? 0))%
                                                  """,
                                                  buttonText: "Сыграть еще раз")
            
            viewController?.show(result: quizResult)
        }
        else{
            
            self.switchToNextQuestion()
...
